--- a/index.html
+++ b/index.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="photos.css">
-    <title></title>
-  </head>
-  <body>
+<head>
+	<title>Purrfect Match</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <p>Koba - Photos</p>
+	<link rel="stylesheet" type="text/css" href="app.css">
+</head>
+<body>
 
-    <!-- Massimo Margagnoni -->
-  <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
-  <img src="http://c2.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg">
-  <img src="http://c2.staticflickr.com/8/7231/6947093326_df216540ff_b.jpg">
+ <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Purrfect Match</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Signup  <i class="fa fa-user-plus"></i></a></li>
+        <li><a href="#about">Login  <i class="fa fa-user"></i></a></li>
+      </ul>
+    </div>
+  </div>
+ </nav>
 
-    <!-- Giuseppe Milo -->
-  <img src="http://c1.staticflickr.com/9/8788/17367410309_78abb9e5b6_b.jpg">
-  <img src="http://c2.staticflickr.com/6/5814/20700286354_762c19bd3b_b.jpg">
-  <img src="http://c2.staticflickr.com/6/5647/21137202535_404bf25729_b.jpg">
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-lg-12">
+ 			<div class="content">
+ 				<h1>Purrfect Match</h1>
+ 				<h3>The Only Human-Feline Dating App</h3>
+ 				<hr>
+ 				<button class="btn btn-default btn-lg"><i class="fa fa-paw fa-fw"></i> Get Started!</button>
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
 
-    <!-- GörlitzPhotography -->
-  <img src="http://c2.staticflickr.com/6/5588/14991687545_5c8e1a2e86_b.jpg">
-  <img src="http://c2.staticflickr.com/4/3888/14878097108_5997041006_b.jpg">
-  <img src="http://c2.staticflickr.com/8/7579/15482110477_0b0e9e5421_b.jpg">
+ <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+ <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  </body>
+
+</body>
 </html>
